  first track restarted the first track. Now it goes to the last track.
- Added incremental search

xxxxxxxx: Version 0.1.8-BETA
- WARNING: muggle currently only works correctly with LD_ASSUME_KERNEL=2.4.1.
  Since 1.3.27 vdr does not enforce this anymore
- reimplemented mugglei option -z (DeleteStaleReferences), also in the
  muggle setup menu
- rewrote most of the SQL interface to allow easier implementation
  of alternative data bases backends or alternative data source like EPG
- major edits to README - split off README.mysql
- implemented support for SQLite. Tested with version 3.2.1. The
  field genre2 is not supported because it would be too slow.
  Define HAVE_SQLITE in Make.config, details see README.mysql
  Parameters h,u,s,p,w are not needed and not supported with SQLite.
- implemented support for Postgresql. Tested with version 8.0. 
  Define HAVE_PG in Make.config, details see README.postgresql
- if instant play is used while playing from the 'play' collection,
  the latter will be resumed after instant play finishes.
- progress display: if the progress of the whole selection is shown,
  the current title will be displayed and not the name of the selection
- if you use an order like Interpret/Album/Tracks and all songs
  have the same track number, instantly playing any of them played
  them all. Fixed
- muggle can now import genre1 from id3v2 tags (the TCON tag). Only the
  first genre is imported, and refinements will be ignored. But
  this allows you to define your own genres. If you use the genre
  hierarchies, they will show up under 'Extra'
- import items from the setup menu: This is done by a background thread.
  Those threads are not allowed to access the OSD, so we removed the
  status messages of the import progress.
- mugglei: import counter counts only successes.
- mugglei: do not change directory to TLD before starting the import.
  mugglei has to be started in TLD or below. This way wildcards will
  always be expanded as expected.