@@ -232,3 +232,4 @@ xxxxxxxx: Version 0.1.8-BETA
 - mugglei: do not change directory to TLD before starting the import.
   mugglei has to be started in TLD or below. This way wildcards will
   always be expanded as expected.
+- display covers on the TV and with graphTFT. Details see README
